After compteting all the chart

--- a/views/noOfMatches.ejs
+++ b/views/noOfMatches.ejs
@@ -31,7 +31,7 @@
     // console.log(data);
     let listOfYear = [];
     let listOfNoOfMatches = [];
-    console.log(data)
+    // console.log(data)
     for(i of data){
         listOfYear.push(i.name);
         listOfNoOfMatches.push(i.y);
