--- a/views/strikerateOfBatsman.ejs
+++ b/views/strikerateOfBatsman.ejs
@@ -8,41 +8,9 @@
 	<script src="https://code.highcharts.com/highcharts.js"></script>
 	<script src="https://code.highcharts.com/highcharts-more.js"></script>
 	<script src="https://code.highcharts.com/modules/exporting.js"></script>
-	<style>
-	body{
-        background: #d9d9d9;
-    }
-	#container1 {
-		min-width: 310px;
-		max-width: 800px;
-		height: 400px;
-		margin: 0 auto
-	}
-	body{
-        background: #d9d9d9;
-    }
-	.btn{
-		padding: 30px;
-		text-align: center;
-	}
-	button{
-		background: #00e600;
-		border: none;
-		height: 40px;
-		width: 100px;
-		border-radius: 5px;
-		margin: 10px;
-		font-size: 18px;
-		color: white;
-	}
-	button:hover{
-		background: #001a66;
-		color: #00e600;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<!-- <p><%=data%></p> -->
 	<div class="container1" id="container1">
 	
 	</div>
@@ -51,6 +19,9 @@
 		<button id="inverted">Inverted</button>
 		<button id="polar">Polar</button>
 	</div>
+	<div class="home-btn">
+        <button id="home" class="home"> <a id="home" class="home" href="/">Home</a></button>
+    </div>
 </body>
 <script type="text/javascript">
 	let strikerateOfBatsman = <%-data%>;
@@ -58,8 +29,10 @@
 	let runrateRate = [];
 	for(let i of strikerateOfBatsman){
 		batsmanName.push(i.name);
-		runrateRate.push(i.y);
+		let x = parseFloat(i.y.toFixed(2))
+		runrateRate.push(x);
 	}
+	console.log(runrateRate)
 	var chart = Highcharts.chart('container1', {
 
 	    title: {
@@ -71,9 +44,17 @@
 	    },
 
 	    xAxis: {
-	        categories: batsmanName
+	        categories: batsmanName,
+	        title: {
+         	   text: 'List of Batsman'
+        	}
 	    },
+	    yAxis: {
+	        title: {
+	            text: 'Strike rate'
+	        }
 
+	    },
 	    series: [{
 	        type: 'column',
 	        colorByPoint: true,
